fixed plateform overflow influencing games display style

--- a/public/css/advancedSearch.css
+++ b/public/css/advancedSearch.css
@@ -15,11 +15,13 @@ input[type="number"] {
 }
 
 
-.game-explore{
+.game-explore {
     display: grid;
-    grid-template: "search-container games-grid";
+    grid-template-rows: auto;
+    grid-template-areas: "search-container games-grid";
     overflow: auto;
 }
+
 
 .games-grid{
     margin: 0;
@@ -32,4 +34,13 @@ input[type="number"] {
       position: sticky;
        top: 0;
 grid-area: search-container;
+}
+
+.platform-container{
+    overflow: auto;
+    max-height: 500px;
+}
+
+.not-found{
+    text-align: center;
 }
